@startuml

title __BACKGROUND's Class Diagram__\n

  namespace com.sleepestapp.sleepest {
    namespace background {
      class com.sleepestapp.sleepest.background.AlarmReceiver {
          {static} + cancelAlarm()
          {static} + createInformationNotification()
          {static} + isAlarmManagerActive()
          + onReceive()
          {static} + startAlarmManager()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace background {
      class com.sleepestapp.sleepest.background.ForegroundService {
          - actualWakeUp : int
          - alarmTimeInSeconds : int
          - bannerConfig : boolean[]
          {static} - foregroundServiceStartTime : int
          - isAlarmActive : boolean
          - isServiceStarted : boolean
          - isSleeping : boolean
          - isSubscribed : boolean
          - sleepValueAmount : int
          - userInformed : boolean
          - userSleepTime : int
          - wakeLock : WakeLock
          + OnAlarmChanged()
          + OnBannerConfigChanged()
          + OnSleepApiDataChanged()
          + OnSleepTimeChanged()
          {static} + getForegroundServiceTime()
          + onBind()
          + onCreate()
          + onDestroy()
          + onStartCommand()
          {static} + startOrStopForegroundService()
          + updateNotification()
          - checkAlarmSet()
          - checkPossibleAlarm()
          - createNotification()
          - fillList()
          - getRealAlarmTime()
          - sendUserInformation()
          {static} - setForegroundServiceStartTime()
          - setPreferences()
          - showForegroundNotification()
          - startService()
          - stopService()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace background {
      class com.sleepestapp.sleepest.background.WorkmanagerCalculation {
          {static} - context : Context
          + WorkmanagerCalculation()
          + doWork()
          {static} + startPeriodicWorkmanager()
          {static} + stopPeriodicWorkmanager()
      }
    }
  }
  

  com.sleepestapp.sleepest.background.AlarmReceiver -up-|> android.content.BroadcastReceiver
  com.sleepestapp.sleepest.background.ForegroundService -up-|> androidx.lifecycle.LifecycleService
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.background.ForegroundObserver : foregroundObserver
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.background.AlarmCycleState : alarmCycleState
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.storage.db.AlarmEntity : alarmEntity
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.storage.DataStoreRepository : dataStoreRepository
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.storage.DatabaseRepository : databaseRepository
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.util.NotificationUtil : notificationUtil
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.sleepcalculation.SleepCalculationHandler : sleepCalculationHandler
  com.sleepestapp.sleepest.background.ForegroundService o-- com.sleepestapp.sleepest.googleapi.SleepHandler : sleepHandler
  com.sleepestapp.sleepest.background.WorkmanagerCalculation -up-|> androidx.work.Worker
  com.sleepestapp.sleepest.background.WorkmanagerCalculation o-- com.sleepestapp.sleepest.sleepcalculation.SleepCalculationHandler : sleepCalculationHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
